--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   flutter_screenutil: ^5.5.4
   flutter_launcher_icons: ^0.10.0
   form_field_validator: ^1.1.0
+  flutter_rating_bar: ^4.0.1
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
