--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_launcher_icons: ^0.10.0
   form_field_validator: ^1.1.0
   flutter_rating_bar: ^4.0.1
+  flutter_svg: ^1.1.5
 
 
 
