--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   form_field_validator: ^1.1.0
   flutter_rating_bar: ^4.0.1
   flutter_svg: ^1.1.5
+  file_picker: ^5.2.0
+  country_pickers:
+
 
 
 
