--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
   flutter_screenutil: ^5.5.4
   flutter_launcher_icons: ^0.10.0
   form_field_validator: ^1.1.0
-  flutter_rating_bar: ^4.0.1
+#  flutter_rating_bar: ^4.0.1
   flutter_svg: ^1.1.5
   file_picker: ^5.2.0
-  country_pickers:
+#  country_pickers:
   country_calling_code_picker: ^2.0.1
 
 
